@@ -605,7 +605,7 @@ include_once('include/page_header.php');
 			}
 // } add dependencies
 
-			if($trigger['status'] != TRIGGER_STATUS_UNKNOWN) $trigger['error'] = '';
+			if($trigger['value'] != TRIGGER_VALUE_UNKNOWN) $trigger['error'] = '';
 
 			$templated = false;
 			foreach($trigger['hosts'] as $hostid => $host){
@@ -635,9 +635,6 @@ include_once('include/page_header.php');
 
 			if($trigger['status'] == TRIGGER_STATUS_DISABLED){
 				$status = new CLink(S_DISABLED, $status_link, 'disabled');
-			}
-			else if($trigger['status'] == TRIGGER_STATUS_UNKNOWN){
-				$status = new CLink(S_UNKNOWN, $status_link, 'unknown');
 			}
 			else if($trigger['status'] == TRIGGER_STATUS_ENABLED){
 				$status = new CLink(S_ENABLED, $status_link, 'enabled');
